Handled corner cases and added dynamic display font sizing

--- a/calculator/styles/index.css
+++ b/calculator/styles/index.css
@@ -49,6 +49,7 @@ h1 {
     text-align: right;
     vertical-align: bottom;
     padding: 30px 10px 10px 10px;
+    line-height: 45px;
 }
 .twocolspan {
     grid-area: span 1 / span 2;
