--- a/rock-paper-scissors/styles/index.css
+++ b/rock-paper-scissors/styles/index.css
@@ -3,30 +3,29 @@ body {
     text-align: center;
 }
 h1 {
-    font-size: 30px;
-    margin-top:20px;
-    margin-bottom: 20px;
-}
-.score {
-    margin-bottom: 20px;
+    font-size: 200%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 .score-box {
     display: inline-block;
-    width: 100px;
-    height: 100px;
-    border: 4px solid rgb(126, 127, 202) !important;
-    padding: 10px;
-    margin: 0px 50px 0px 50px;
+    width: 8em;
+    height: 8em;
+    border: 0.25em solid rgb(126, 127, 202) !important;
+    padding: 1%;
+    margin: 0 1% 0 1%;
 }
 .score-name {
-    margin-bottom: 20px;
+    margin-bottom: 30%;
 }
 .score-value {
-    font-size: 40px;    
+    font-size: 180%;
+    font-weight: bold;    
 }
 .message {
-    font-size: 20px;
-    margin-bottom: 20px; 
+    font-size: 120%;
+    margin-top: 3%; 
+    margin-bottom: 3%; 
 }
 .message b {
     color: rgb(216, 41, 41);
@@ -36,10 +35,10 @@ button {
     text-transform: uppercase;
     text-decoration: none;
     background:rgb(126, 127, 202);
-    padding: 20px;
-    margin: 10px;
-    border-radius: 5px;
-    width: 140px;
+    padding: 1em;
+    margin: 0.5em;
+    border-radius: 0.25rem;
+    width: 7em;
     display: inline-block;
     border: none;
     font-weight: bold;
