--- a/tic-tac-toe/styles/index.css
+++ b/tic-tac-toe/styles/index.css
@@ -16,31 +16,111 @@ body {
 #header {
     font-size: 200%;
     font-weight: bold;
-    padding: 1em 0 0 0;
+    padding: 0.75em 0 0 0;
 }
-#message {
-    padding: 1em 0 0 0;
+/* Player details */
+#topbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1em 0 0.5em 0;
 }
-button {
-    width: 100%;
-    font-size: 90%;
+#players {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.player {
+    padding: 0.2em;
+    margin: 0.2em;
+    text-align: center;
+    border: 3px solid lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+input {
+    text-align: center;
+    width: 9em;
+    font-size: 85%;
     padding: 0.5em;
     margin: 0.2em 0;
     font-family: inherit;  
     border-radius: 0.2em;
+    border-width: 0px;
 }
-#add {
+.symbol {
+    padding: 0 0 0.2em 0;
+}
+.score {
+    padding: 0.2em 0 0.2em 0;
+    font-size: 150%;
+}
+/* Settings */
+.settings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.settings > * {
+    margin: 0.3em;
+}
+button, select {
+    text-align: center;
+    width: 7em;
+    padding: 0.5em;
+    margin: 0.2em 0;
+    font-family: inherit;  
+    border-radius: 0.2em;
+    border-width: 0px;
+}
+button {
     background-color: #47cf73;
     color: white;
-    width: 5em;
 }
-.delete {
-    background-color: LightCoral;
-    color: white;
-    width: 5em;
+select {
+    text-align: center;
+    text-align-last: center;
+    -moz-text-align-last: center;
 }
-.read {
-    background-color: #a5aca7;
-    color: white;
-    width: 8em;
+/* Game board */
+#message_container {
+    align-items: stretch;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+#message {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(0,0,0,0.0);
+    color: midnightblue;
+    font-size: 200%;
+    font-weight: bold;
+}
+#board {
+    position: relative;
+}
+#gameboard {
+    display: grid;
+    text-align: center;
+    margin: 1em;
+    border: solid 2px midnightblue;
+}
+.cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    font-size: 300%;
+    font-weight: bold;
+    width: 100px;
+    height: 100px;
+    border: solid 2px midnightblue;
 }
